--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,12 +27,10 @@
     <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Social Tags -->
+    <meta property="og:title" content="{{ .Title }}" />
+    <meta property="og:url" content="{{ .Site.BaseURL }}{{ .Params.slug }}" />
+    <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}" />
 
 </head>
 
