--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,8 +29,8 @@
 
     <!-- Social Tags -->
     <meta property="og:title" content="{{ .Title }}" />
-    <meta property="og:url" content="{{ .Site.BaseURL }}{{ .Params.slug }}" />
-    <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}" />
+    <meta property="og:url" content="{{ .Site.BaseURL }}/{{ .Params.slug }}" />
+    <meta property="og:image" content="{{ .Site.BaseURL }}/{{ .Params.image }}" />
 
 </head>
 
